<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg"
    tools:context="com.example.jasycdell3.rentalpal.Finish">

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/finished"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_b"
        android:layout_marginLeft="@dimen/margin_lr"
        android:layout_marginRight="@dimen/margin_lr"
        android:layout_marginTop="10dp"
        android:background="@drawable/button_capsule"
        android:text="@string/finished"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="@dimen/text_btn_size"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/finished"
        android:layout_marginBottom="@dimen/margin_b"
        android:layout_marginLeft="@dimen/margin_lr"
        android:layout_marginRight="@dimen/margin_lr"
        android:gravity="center"
        android:orientation="horizontal"
        android:weightSum="1">

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/finish_edit"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_gravity="center"
            android:background="@drawable/circle"
            android:gravity="center"
            android:text="@string/edit"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/finish_view_document"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_gravity="center"
            android:layout_marginLeft="15dp"
            android:background="@drawable/circle_blue"
            android:gravity="center"
            android:text="@string/view_doc"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="20sp" />

    </LinearLayout>


    <LinearLayout
        android:id="@+id/linear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/adView_finish"
        android:layout_centerInParent="true"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="5dp"
            android:text="@string/sharevia"
            android:textColor="@color/white"
            android:textStyle="bold" />

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/share_via_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_b"
            android:layout_marginLeft="@dimen/margin_lr"
            android:layout_marginRight="@dimen/margin_lr"
            android:background="@drawable/button_capsule"
            android:text="@string/string_email"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="@dimen/text_btn_size"
            android:textStyle="bold" />

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/share_via_messenger"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_b"
            android:layout_marginLeft="@dimen/margin_lr"
            android:layout_marginRight="@dimen/margin_lr"
            android:background="@drawable/button_capsule"
            android:text="@string/string_messanger"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="@dimen/text_btn_size"
            android:textStyle="bold" />

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/share_other"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_lr"
            android:layout_marginRight="@dimen/margin_lr"
            android:background="@drawable/button_capsule"
            android:text="@string/string_share_other"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="@dimen/text_btn_size"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/view_previous"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="5dp"
            android:text="@string/view_previous"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:visibility="gone" />
    </LinearLayout>

    <com.google.android.gms.ads.AdView
        android:id="@+id/adView_finish"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        ads:adSize="SMART_BANNER"
        ads:adUnitId="@string/banner_home_footer" />
</RelativeLayout>