<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg"
    android:orientation="vertical"
    android:weightSum="1"
    tools:context="com.example.jasycdell3.rentalpal.FormSubmission">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="10dp"
        android:layout_weight="0.20">

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/btn_report"
            android:layout_width="100dp"
            android:layout_height="30dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:background="@drawable/btn_red_cap"
            android:text="@string/reports"
            android:textAllCaps="false"
            android:textColor="@color/white" />

        <android.support.v7.widget.AppCompatEditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/btn_report"
            android:layout_marginTop="5dp"
            android:background="@color/edit_bg"
            android:gravity="start|top"
            android:hint="@string/short_desc"
            android:padding="8dp"
            android:textColor="@color/white"
            android:textColorHint="@color/hint_color" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="10dp"
        android:layout_weight="0.55">

        <!--<android.support.v7.widget.RecyclerView
            android:id="@+id/recycler_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clipToPadding="false"
            android:scrollbars="vertical" />-->
        <GridView
            android:id="@+id/gridView12"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:horizontalSpacing="7dp"
            android:numColumns="2"
            android:verticalSpacing="7dp">

        </GridView>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_weight="0.20"
        android:orientation="horizontal"
        android:weightSum="1">

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/save_images"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/button_capsule"
            android:text="@string/save"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <android.support.v7.widget.AppCompatButton
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/save_images"
            android:layout_margin="5dp"
            android:background="@drawable/blue"
            android:text="@string/pass"
            android:textAllCaps="false"
            android:textColor="@color/white" />

        <android.support.v7.widget.AppCompatButton
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/save_images"
            android:layout_margin="5dp"
            android:background="@drawable/blue"
            android:text="@string/next"
            android:textAllCaps="false"
            android:textColor="@color/white" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.15"
        android:background="@color/light_grey">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/string_add"

            android:textColor="@color/white"
            android:textSize="@dimen/text_add"
            android:textStyle="bold" />
    </RelativeLayout>
</LinearLayout>
