<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg"
    tools:context="com.example.jasycdell3.rentalpal.Share">


    <LinearLayout
        android:id="@+id/linear"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerInParent="true"

        android:gravity="center"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_lr"
            android:layout_marginLeft="@dimen/margin_lr"
            android:layout_marginRight="@dimen/margin_lr"
            android:gravity="center|top">

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/btn1"
                android:layout_width="200dp"
                android:layout_height="40dp"
                android:layout_centerVertical="true"
                android:layout_marginBottom="@dimen/margin_b"
                android:background="@drawable/button_capsule"
                android:gravity="center"
                android:text="@string/string_edit"
                android:textAllCaps="false"
                android:textColor="@color/white" />

            <android.support.v7.widget.AppCompatButton
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginLeft="-40dp"
                android:layout_toRightOf="@id/btn1"
                android:background="@drawable/circle"
                android:gravity="center"
                android:text="@string/finish"
                android:textAllCaps="false"
                android:textColor="@color/white" />
        </RelativeLayout>

        <android.support.v7.widget.AppCompatButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_b"
            android:layout_marginLeft="@dimen/margin_lr"
            android:layout_marginRight="@dimen/margin_lr"
            android:background="@drawable/button_capsule"
            android:text="@string/string_email"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="@dimen/text_btn_size"
            android:textStyle="bold" />

        <android.support.v7.widget.AppCompatButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_b"
            android:layout_marginLeft="@dimen/margin_lr"
            android:layout_marginRight="@dimen/margin_lr"
            android:background="@drawable/button_capsule"
            android:text="@string/string_messanger"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="@dimen/text_btn_size"
            android:textStyle="bold" />

        <android.support.v7.widget.AppCompatButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_lr"
            android:layout_marginRight="@dimen/margin_lr"
            android:background="@drawable/button_capsule"
            android:text="@string/string_pdf"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="@dimen/text_btn_size"
            android:textStyle="bold" />
    </LinearLayout>


    <android.support.v7.widget.AppCompatEditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|start"

        android:layout_marginBottom="@dimen/fab_margin"
        android:background="@drawable/rectangle" />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_marginBottom="160dp"
        android:layout_marginRight="@dimen/fab_margin"
        android:src="@android:drawable/ic_dialog_email"
        android:visibility="invisible"
        app:backgroundTint="@color/colorFAB2"
        app:elevation="6dp"
        app:pressedTranslationZ="12dp" />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_marginBottom="90dp"
        android:layout_marginRight="@dimen/fab_margin"
        android:src="@android:drawable/ic_dialog_email"
        android:visibility="invisible"
        app:backgroundTint="@color/colorFAB1"
        app:elevation="6dp"
        app:pressedTranslationZ="12dp" />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_gravity="bottom|end"
        android:layout_margin="@dimen/fab_margin"
        android:src="@android:drawable/ic_menu_share"
        app:backgroundTint="@color/colorAccent"
        app:elevation="6dp"
        app:pressedTranslationZ="12dp" />





</android.support.design.widget.CoordinatorLayout>