<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:background="@color/dark_blue"
    android:orientation="vertical"
    android:weightSum="1"
    tools:context="com.example.jasycdell3.rentalpal.FormSubmission">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.12"
        android:background="@color/light_grey">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_margin="5dp"
            android:src="@drawable/rental_pal" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.55">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/activity_horizontal_margin"
            android:orientation="vertical">

            <android.support.v7.widget.AppCompatEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@color/edit_bg"
                android:gravity="start"
                android:hint="@string/name"
                android:padding="8dp"
                android:singleLine="true"
                android:textColor="@color/white"
                android:textColorHint="@color/hint_color" />

            <android.support.v7.widget.AppCompatEditText
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_margin="10dp"
                android:background="@color/edit_bg"
                android:gravity="start|top"
                android:hint="@string/address"
                android:padding="8dp"
                android:textColor="@color/white"
                android:textColorHint="@color/hint_color" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="1">

                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:layout_weight="0.65"
                    android:background="@drawable/bg_time">

                    <TextView
                        android:id="@+id/txt_time"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentStart="true"
                        android:layout_centerVertical="true"

                        android:padding="10dp"
                        android:text="@string/address"
                        android:textColor="@color/dark_blue"
                        android:textSize="15sp" />

                    <android.support.v7.widget.AppCompatButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_margin="5dp"
                        android:layout_marginBottom="5dp"
                        android:layout_toEndOf="@+id/txt_time"
                        android:layout_toRightOf="@+id/txt_time"
                        android:background="@drawable/btn_auto"
                        android:text="Auto"
                        android:textColor="@color/hint_color" />

                </RelativeLayout>

                <View
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.35" />
            </LinearLayout>
        </LinearLayout>
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.18"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:weightSum="1">

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/btn1"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginBottom="@dimen/margin_b"
            android:layout_marginTop="10dp"
            android:layout_weight=".80"
            android:background="@color/edit_bg"
            android:gravity="start|center_vertical"
            android:hint="@string/name"
            android:padding="8dp"
            android:text="@string/string_menu_list"
            android:textAllCaps="false"
            android:textColor="@color/hint_color" />

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/menu"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_marginLeft="-40dp"
            android:layout_marginStart="-40dp"
            android:background="@drawable/circle_icon"
            android:drawableTop="@android:drawable/arrow_up_float"
            android:padding="3dp"

            android:text="@string/string_menu"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="25sp" />

    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.15"
        >

    <com.google.android.gms.ads.AdView
        android:id="@+id/adView_form_submission"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        ads:adSize="SMART_BANNER"
        ads:adUnitId="@string/banner_home_footer"
        android:layout_centerHorizontal="true"
        >

    </com.google.android.gms.ads.AdView>
    </RelativeLayout>
</LinearLayout>
